--- a/BigSchool1/Web.config
+++ b/BigSchool1/Web.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-BigSchool1-20190410011942.mdf;Initial Catalog=aspnet-BigSchool1-20190410011942;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=TRUNG-TIN\SQLEXPRESS;Initial Catalog=BigSchool1;user id=sa;pwd=anh123456@;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
