--- a/BigSchool1/BigSchool1.csproj
+++ b/BigSchool1/BigSchool1.csproj
@@ -168,16 +168,38 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201904100631185_InitialCreate.cs" />
+    <Compile Include="Migrations\201904100631185_InitialCreate.Designer.cs">
+      <DependentUpon>201904100631185_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201904100702274_InitialModel.cs" />
+    <Compile Include="Migrations\201904100702274_InitialModel.Designer.cs">
+      <DependentUpon>201904100702274_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201904100717170_CreateTableCourse.cs" />
+    <Compile Include="Migrations\201904100717170_CreateTableCourse.Designer.cs">
+      <DependentUpon>201904100717170_CreateTableCourse.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201904100722052_PopulateCategoryTable.cs" />
+    <Compile Include="Migrations\201904100722052_PopulateCategoryTable.Designer.cs">
+      <DependentUpon>201904100722052_PopulateCategoryTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\Course.cs" />
+    <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\CourseViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -235,6 +257,7 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Courses\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -251,6 +274,20 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201904100631185_InitialCreate.resx">
+      <DependentUpon>201904100631185_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904100702274_InitialModel.resx">
+      <DependentUpon>201904100702274_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904100717170_CreateTableCourse.resx">
+      <DependentUpon>201904100717170_CreateTableCourse.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904100722052_PopulateCategoryTable.resx">
+      <DependentUpon>201904100722052_PopulateCategoryTable.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
